# lein-discord-bot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: help.rs  id.rs  meta.rs  mod.rs  send_private_messages.rs  wonderful_command.rs
